# Rust-BWA

./: .env.example  Cargo.toml  README.md
migrations/: 20250828151024_create_items_table.sql
src/: errors.rs  handlers.rs  main.rs  models.rs
tests/: integration_tests.rs
